Fixed truncating issue (issue #21)

--- a/css/style.less
+++ b/css/style.less
@@ -61,7 +61,7 @@ p {
 	color: #569286;
 	background: #fff;
 	text-align: right;
-	text-overflow: ellipsis;
+	//text-overflow: ellipsis;
 	border-bottom: 6px solid #ebe3db;
 	width: 296px;
 	height: 36px;
